--- a/SAFARI/template/req.html
+++ b/SAFARI/template/req.html
@@ -1,14 +1,10 @@
-<!-- this code is written by @biisal tg:biisal-files  -->
-<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.  -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BISAL FILES | {{file_name}}</title>
+    <title>LUSI FILMS | {{file_name}}</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
     <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
@@ -21,15 +17,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
-<!-- this code is written by @biisal tg:biisal-files  -->
-<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
 
 <body>
     <nav>
         <div class="nleft">
-            <a href="https://t.me/bisal_files">
-                <!-- if u are trying to change the header name please remove the title text from bottom line  -->
-                <h3 id="heading" style="z-index: 100;" class="magnet title">BISAL FILES</h3>
+            <a href="https://t.me/">
+                <h3 id="heading" style="z-index: 100;" class="magnet">LUSI FILMS - Official</h3>
             </a>
         </div>
         <div class="nryt">
@@ -46,8 +39,6 @@
             <a href="#sec4" class="magnet contact-btn" onclick="toggleWidth(this)">LET'S TALK</a>
         </div>
     </center>
-    <!-- this code is written by @biisal tg:biisal-files  -->
-    <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
 
     <div class="outer">
         <div class="inner">
@@ -65,7 +56,7 @@
                             alt="">watch in VLC PLAYER</button>
                     <button class="magnet" onclick="mx_player()"><img src="https://i.postimg.cc/sx4Msv4T/mx.png"
                             alt="">watch in MX PLAYER</button>
-                    <button class="magnet" onclick="playit_player()"><img src="https://i.postimg.cc/RVGWYJFF/playit.png"
+                    <button class="magnet" onclick="playit_player()"><img src="https://i.postimg.cc/VNCwVGjz/IMG-20240408-140543.jpg"
                             alt="">watch in PLAYit
                         PLAYER</button>
                     <button class="magnet" onclick="km_player()"><img src="https://i.postimg.cc/wT9tFQ9Z/km.png"
@@ -99,43 +90,36 @@
                         <div class="abt-sec" id="sec2">
                             <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
                             <div class="links chnl-link">
-                                <a class="magnet" href="https://t.me/bisal_files"><button>BISAL FILES -
-                                        MAIN</button></a>
-                                <a class="magnet" href="https://t.me/movies_request_group_Fhd"><button>BISAL FILES
-                                        REQUEST GROUP</button></a>
-                                <a class="magnet" href="https://t.me/+lNMBlcpzuyg0NjI1"><button>TERABOX
-                                        LINKS</button></a>
-                                <a class="magnet" href="https://t.me/bisal_movie_request_group"><button>FILES REQ
-                                        BACKUP</button></a>
-                                <a class="magnet" href="https://t.me/+gHtA-IkBdgQ1MzA9"><button>BISAL FILES
-                                        DIRECT</button></a>
+                                <a class="magnet" href="https://t.me/lusifilms"><button>LUSI FILMS - MAIN</button></a>
+                                <a class="magnet" href="https://t.me/apnamovie4"><button>REQUEST GROUP</button></a>
+                                <a class="magnet" href="https://t.me/topallmovie"><button>NEW RELEASE MOVIES</button></a>
+                                <a class="magnet" href="https://t.me/lusi_films"><button>NEW RELEASE MOVIES 2</button></a>
+                            <!--   <a class="magnet" href="https://t.me/+gHtA-IkBdgQ1MzA9"><button>BISAL FILES DIRECT</button></a> -->
                             </div>
                         </div>
                         <div class="abt-sec" id="sec3">
                             <h1>OUR ALL <span>BOTS</span> LIST</h1>
                             <div class="links bot-link">
-                                <a class="magnet" href="https://t.me/Pm_link_yojana_bot"><button>PM LINK
-                                        YOJANA</button></a>
-                                <a class="magnet" href="https://t.me/Ai_Auto_Filter_Bot"><button>AI FILTER
+                                <a class="magnet" href="https://t.me/MiniAdvanceBOT"><button>MINI ADVANCE
                                         BOT</button></a>
-                                <a class="magnet" href="https://t.me/Bisal_File2Link_Bot"><button>FILE STREAM
+                                <a class="magnet" href="https://t.me/Lusi_Films_Bot"><button>LUSI FILMS
                                         BOT</button></a>
-                                <a class="magnet" href="https://t.me/File_RenamerV4_Bot"><button>FILE RENAMER
+                                <a class="magnet" href="https://t.me/NewMoviesProviderBoT"><button>NEW MOVIE PROVIDER
                                         BOT</button></a>
-                                <a class="magnet" href="https://t.me/Wanda_Ki_Shakti_Bot"><button>WANDA KI SHAKTI
+                            <!--   <a class="magnet" href="https://t.me/File_RenamerV4_Bot"><button>FILE RENAME
                                         BOT</button></a>
-                                <a class="magnet" href="https://t.me/wanda_ki_shakti_2_bot"><button>WANDA KI SHAKTI 2.0
+                                <a class="magnet" href="https://t.me/Wanda_Ki_Shakti_Bot"><button>4GB RENAME
                                         BOT</button></a>
+                                <a class="magnet" href="https://t.me/wanda_ki_shakti_2_bot"><button>URL UPLODER
+                                        BOT</button></a> -->
                             </div>
                         </div>
                         <div class="abt-sec" id="sec4">
-                            <!-- this code is written by @biisal tg:biisal-files  -->
-                            <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
 
                             <p style="text-align: center;">we can tal'k for your support and you can report through
                                 telegram</p>
                             <div class="links contact">
-                                <a href="https://t.me/biisal_bot"><button>CONTACT</button></a>
+                                <a href="https://t.me/safaridev"><button>CONTACT</button></a>
                             </div>
                         </div>
                     </div>
@@ -160,46 +144,16 @@
                 </p>
             </div>
             <center>
-
-                <div class="movie-cont">
-                    <a href="https://t.me/+PA8OPL2Zglk3MDM1">
-                        <div class="movieSug">
-                            <div class="movieDets">
-
-                            </div>
-                            <div class="movieimg">
-                                <img src="">
-                            </div>
-                        </div>
-                    </a>
-                    <div class="low-width-movie-dets">
-                        <div class="movieStsBar">
-                            <div class="movieDets-mini">
-
-                            </div>
-                        </div>
-                    </div>
-                    <button class="ranMovBtn" onclick="getDets()">Get More Movies Suggestion</button>
-                </div>
-
-            </center>
-            <!-- this code is written by @biisal tg:biisal-files  -->
-            <!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
-
-
-            <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2023 <a href="https://t.me/bisal_files"><span
-                                style="font-weight: 700;">BISAL FILES</span></a>. All
+                    <h5 class="text-center">Copyright © 2023 <a href="https://t.me/lusifilms"><span
+                                style="font-weight: 700;">LUSI FILMS</span></a>. All
                         Rights Reserved.</h5>
                     <div class="icons">
-                        <a href="https://github.com/biisal"><i class="fa-brands fa-github fa-lg"></i></a>
-                        <a href="https://t.me/bisal_Files"><i class="fa-brands fa-telegram fa-lg"></i></a>
-                        <a href="https://www.instagram.com/avisekeditx"><i
-                                class="fa-brands fa-square-instagram fa-lg"></i></a>
+                        <a href="https://github.com/safarideveloper"><i class="fa-brands fa-github fa-lg"></i></a>
+                        <a href="https://t.me/safaridev"><i class="fa-brands fa-telegram fa-lg"></i></a>
+                    <!--   <a href="https://www.instagram.com/jkjeetu01"><i
+                                class="fa-brands fa-square-instagram fa-lg"></i></a>    -->
                     </div>
-                    <h4 style="font-weight: 700;">This Page Is Made By <a
-                            href="https://t.me/bisal_files"><span>Bisal</span></a></h4>
                 </div>
             </center>
         </footer>
@@ -230,5 +184,3 @@
 
 </html>
 
-<!-- this code is written by @biisal tg:biisal-files  -->
-<!-- stealing credit doesn't make you developer..so try to give full credit to the developer 😊 u will not loose anything for giving proper credit.   -->
