--- a/SAFARI/template/req.html
+++ b/SAFARI/template/req.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LUSI FILMS | {{file_name}}</title>
+    <title>{{file_name}}</title>
     <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
     <link rel="stylesheet" href="https://biisal.github.io/Resources/StreamCSS.css">
     <link rel="stylesheet" href="https://biisal.github.io/Resources/playerCss.css">
@@ -21,8 +21,8 @@
 <body>
     <nav>
         <div class="nleft">
-            <a href="https://t.me/">
-                <h3 id="heading" style="z-index: 100;" class="magnet">LUSI FILMS - Official</h3>
+            <a href="https://telegram.me/safaridev">
+                <h3 id="heading" style="z-index: 100;" class="magnet">SAFARI-DEV</h3>
             </a>
         </div>
         <div class="nryt">
@@ -35,7 +35,7 @@
         <div class="about-nav">
             <a href="#sec1" class="wlcm magnet" onclick="toggleWidth(this)">WELCOME</a>
             <a href="#sec2" class="abt-chnl magnet" onclick="toggleWidth(this)">CHANNELS</a>
-            <a href="#sec3" class="magnet bot-btn" onclick="toggleWidth(this) , bot_btn_clicked()">BOTS</a>
+        <!--   <a href="#sec3" class="magnet bot-btn" onclick="toggleWidth(this) , bot_btn_clicked()">BOTS</a> -->
             <a href="#sec4" class="magnet contact-btn" onclick="toggleWidth(this)">LET'S TALK</a>
         </div>
     </center>
@@ -47,9 +47,9 @@
                     width="100%"></video>
                 <div class="player"></div>
                 <div class="file-name">
-                    <h4>File name : </h4>
-                    <br>
-                    <p id="myDiv">{{file_name}}</p>
+                <!--   <h4>File name : </h4> -->
+                    
+                    <p id="myDiv">{{file_name}}</p> 
                 </div>
                 <div class="downloadBtn">
                     <button class="magnet" onclick="vlc_player()"><img src="https://i.postimg.cc/15TQ4y7B/vlc.png"
@@ -87,17 +87,17 @@
                                 your snacks, sit back, and <span>enjoy</span> the show!
                             </p>
                         </div>
-                        <div class="abt-sec" id="sec2">
+                    <!--   <div class="abt-sec" id="sec2">
                             <h1>OUR ALL <span>CHANNELS</span> LIST</h1>
                             <div class="links chnl-link">
                                 <a class="magnet" href="https://t.me/lusifilms"><button>LUSI FILMS - MAIN</button></a>
-                                <a class="magnet" href="https://t.me/apnamovie4"><button>REQUEST GROUP</button></a>
+                                <a class="magnet" href="https://t.me/LusiGroup"><button>LUSI GROUP</button></a>
                                 <a class="magnet" href="https://t.me/topallmovie"><button>NEW RELEASE MOVIES</button></a>
                                 <a class="magnet" href="https://t.me/lusi_films"><button>NEW RELEASE MOVIES 2</button></a>
-                            <!--   <a class="magnet" href="https://t.me/+gHtA-IkBdgQ1MzA9"><button>BISAL FILES DIRECT</button></a> -->
+                                <a class="magnet" href="https://t.me/+gHtA-IkBdgQ1MzA9"><button>BISAL FILES DIRECT</button></a>
                             </div>
                         </div>
-                        <div class="abt-sec" id="sec3">
+                       <div class="abt-sec" id="sec3">
                             <h1>OUR ALL <span>BOTS</span> LIST</h1>
                             <div class="links bot-link">
                                 <a class="magnet" href="https://t.me/MiniAdvanceBOT"><button>MINI ADVANCE
@@ -106,14 +106,14 @@
                                         BOT</button></a>
                                 <a class="magnet" href="https://t.me/NewMoviesProviderBoT"><button>NEW MOVIE PROVIDER
                                         BOT</button></a>
-                            <!--   <a class="magnet" href="https://t.me/File_RenamerV4_Bot"><button>FILE RENAME
+                               <a class="magnet" href="https://t.me/File_RenamerV4_Bot"><button>FILE RENAME
                                         BOT</button></a>
                                 <a class="magnet" href="https://t.me/Wanda_Ki_Shakti_Bot"><button>4GB RENAME
                                         BOT</button></a>
                                 <a class="magnet" href="https://t.me/wanda_ki_shakti_2_bot"><button>URL UPLODER
-                                        BOT</button></a> -->
+                                        BOT</button></a> 
                             </div>
-                        </div>
+                        </div> -->
                         <div class="abt-sec" id="sec4">
 
                             <p style="text-align: center;">we can tal'k for your support and you can report through
@@ -127,12 +127,12 @@
             </div>
         </div>
         <footer>
-            <div class="mid">
+        <!--   <div class="mid">
                 <h1 class="mid-text">VISIT <a href="#sec3" onclick="bot_btn_clicked()"><span>OUR BOTS LIST</span></a>
                     FOR
                     MORE
                     INFO</h1>
-            </div>
+            </div> -->
 
             <div class="last-text">
                 <p style="font-weight: 500;">
@@ -145,8 +145,8 @@
             </div>
             <center>
                 <div class="copyright">
-                    <h5 class="text-center">Copyright © 2023 <a href="https://t.me/lusifilms"><span
-                                style="font-weight: 700;">LUSI FILMS</span></a>. All
+                    <h5 class="text-center">Copyright © 2023 <a href="https://t.me/safaridev"><span
+                                style="font-weight: 700;">SAFARI-DEVELOPER</span></a>. All
                         Rights Reserved.</h5>
                     <div class="icons">
                         <a href="https://github.com/safarideveloper"><i class="fa-brands fa-github fa-lg"></i></a>
